compiler/tests/compiler/expected/output/IsNonZeroReturnTypeError.shtk.txt
MODULE IsNonZeroReturnTypeError.shtk
ERROR in Line 15 Col 8

    if a println("non zero")
       ^
Invalid return type for __isNonZero__ function

IsNonZeroReturnTypeError.shtk:15:7
